# bjontegaard_cpp

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  example.cpp
bdcpp/: bdcpp.cpp  bdcpp.h
